syntax = "proto3";
package master.v1;

option go_package = "github.com/razvanmarinn/datalake/protobuf/gen/go/master/v1;masterv1";

// Import common to use shared structures like BlockList
import "common/v1/common.proto";

service MasterService {
    rpc GetBatchDestination(GetBatchDestinationRequest) returns (GetBatchDestinationResponse) {}
    rpc RegisterFile(RegisterFileRequest) returns (RegisterFileResponse) {}
    rpc GetMetadata(GetMetadataRequest) returns (GetMetadataResponse) {}
    rpc GetFileListForProject(GetFileListForProjectRequest) returns (GetFileListForProjectResponse) {}
    
    rpc GetProjectFileDetails(GetProjectFileDetailsRequest) returns (GetProjectFileDetailsResponse) {}
    rpc CommitCompaction(CommitCompactionRequest) returns (CommitCompactionResponse) {}
}

// --- Request/Response Definitions ---

message GetBatchDestinationRequest {
    string block_id = 1;
    int64 block_size = 2;
}

message GetBatchDestinationResponse {
    string worker_ip = 1;
    int32 worker_port = 2;
}

message RegisterFileRequest {
    string file_name = 1;
    string owner_id = 2;
    string project_id = 3;
    string file_format = 4; 
    int32 hash = 5;
    int64 file_size = 6;
    
    // Using common.v1 because BlockList is a shared structure
    common.v1.BlockList block_info = 7; 
    
    bool is_compacted = 8; 
}

message RegisterFileResponse {
    bool success = 1;
}

message GetMetadataRequest {
    string file_name = 1;
}

message GetMetadataResponse {
    repeated string block_ids = 1;
    // Using common.v1 for BlockLocation
    map<string, common.v1.BlockLocation> block_locations = 2;
}

message GetFileListForProjectRequest {
    string owner_id = 1 ;
    string project_id = 2;
}

message GetFileListForProjectResponse {
    repeated string file_list_names = 1;
}

message GetProjectFileDetailsRequest {
    string owner_id = 1;
    string project_id = 2;
}

message GetProjectFileDetailsResponse {
    // Using common.v1 for FileDetail
    repeated common.v1.FileDetail files = 1;
}

message CommitCompactionRequest {
    repeated string old_file_names = 1;
    // Reusing the local RegisterFileRequest message since the structure matches
    RegisterFileRequest new_file = 2; 
}

message CommitCompactionResponse {
    bool success = 1;
}